<resources>
    <string name="app_name">IniStory</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="camera">Kamera</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="created_date">Tanggal Dibuat</string>
    <string name="detail_story">Rincian Cerita</string>
    <string name="description">Deskripsi</string>
    <string name="email">Email</string>
    <string name="empty_description_warning">Deskripsi tidak boleh kosong!</string>
    <string name="empty_image_warning">Gambar tidak boleh kosong!</string>
    <string name="failed_bring_up_camera">Gagal memunculkan kamera</string>
    <string name="failed_take_picture">Gagal mengambil gambar</string>
    <string name="gallery">Galeri</string>
    <string name="information">Informasi</string>
    <string name="input_email">Masukan Email</string>
    <string name="input_name">Masukan Nama</string>
    <string name="input_password">Masukan Password</string>
    <string name="label_invalid_email">Email tidak valid</string>
    <string name="label_validation_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="list_location">Daftar Lokasi</string>
    <string name="location">Lokasi</string>
    <string name="login">Masuk</string>
    <string name="login_user_not_found">User tidak ditemukan!</string>
    <string name="logout">Keluar</string>
    <string name="my_location">Lokasiku</string>
    <string name="message_login_page">Masukkan data dulu, pren!</string>
    <string name="move_to_login">Sudah punya akun?</string>
    <string name="move_to_signup">Belum punya akun?</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="permission">Tidak mendapatkan izin</string>
    <string name="signup">Daftar</string>
    <string name="retry">Coba lagi</string>
    <string name="set_location">Set Lokasi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="title_signup_page">Daftar dulu kali, pren!</string>
    <string name="upload">Unggah</string>
    <string name="validate_login_success">Login berhasil!</string>
    <string name="validate_signup_failed">Email sudah ada!</string>
    <string name="validate_signup_success">User berhasil dibuat!</string>
</resources>