<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailStoryActivity">

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="301dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:transitionName="user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_created_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:text="@string/created_date"
        android:textColor="@color/navy"
        android:textSize="11sp"
        android:textStyle="italic"
        android:transitionName="story_upload_time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_name" />

    <ImageView
        android:id="@+id/iv_detail_image"
        android:layout_width="375dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/camera"
        android:scaleType="centerCrop"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_detail_location"
        android:layout_width="18dp"
        android:layout_height="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_location"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_location"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="350dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textAlignment="viewStart"
        android:textColor="@color/navy"
        android:textSize="12sp"
        android:transitionName="user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_image">

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:lineHeight="25dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:transitionName="story_description"
            tools:targetApi="p" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>